layout bug fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,14 +4,24 @@
     z-index: -1;
 }
 
-body{
+.heading{
+    color: white;
+    font-size: 4rem;
     font-family: 'Montserrat', sans-serif;
-    width: 100%;
 }
 
-/* .container{
+.container{
+    padding-top: 2%;
+}
+
+.container-fluid{
     padding: 5%;
-} */
+}
+
+#menu{
+    margin-left: 70%;
+    font-size: 1.2rem;
+}
 
 .title-image{
     transform: rotate(20deg);
@@ -36,21 +46,6 @@ body{
     }
 }
 
-.navbar-brand{
-    font-family: "Ubuntu";
-    font-size: 2.5rem;
-    font-weight: bold;
-}
-
-.nav-item{
-    margin-left: 30px;
-}
-
-.nav-link{
-    font-size: 1.2rem;
-    font-family: "Montserrat-Light";
-}
-
 .download-buttton{
     margin: 5% 3%;
 }
@@ -58,14 +53,14 @@ body{
 #features{
     padding: 5% 0%;
     background-color: white;
+    display: block;
+    width: 70%;
+    margin: auto;
 }
 
 .features-row{
     color: black;
     text-align: center;
-    width: 70%;
-    margin: auto;
-    margin-top: 5%;
 }
 
 h2{
